llvm_rc: add llvm_rc option filter to correctly pick up all options

Fixes: #21315